--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cf-shiftplot-renderer.common.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-watch": "node ./test/watcher",
+    "dev-watch": "cd test && node watcher.js",
     "build": "rollup -c -i src/index.js",
     "build-renderer": "node build-cf-renderer.js"
   },
