fixing renderer build

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "se-shift-plot",
   "version": "0.0.0",
   "description": "shift plot for safety explorer",
-  "main": "cf-shiftplot-renderer.common.js",
+  "main": "renderer.common.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-watch": "cd test && node watcher.js",
     "build": "rollup -c | babel > index.js",
-    "build-renderer": "node build-cf-renderer.js"
+    "build-renderer": "rollup -c renderer.rollup.config.js | babel > renderer.common.js"
   },
   "author": "Rho, Inc.",
   "license": "ISC",
