--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "safety-shift-plot",
-  "version": "1.0.1",
-  "description": "shift plot for safety explorer",
-  "main": "renderer.common.js",
+  "version": "1.1.0",
+  "description": "Chart showing change in lab measures, vital signs and other related measures during the course of a clinical trial.",
+  "main": ".build/safetyShiftPlot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-watch": "cd test && node watcher.js",
-    "build": "rollup -c | babel > index.js",
-    "build-renderer": "rollup -c renderer.rollup.config.js | babel > renderer.common.js"
+    "build": "rollup -c ./scripts/rollup.wrapper.config.js | babel > ./build/safetyShiftPlot.js",
+    "build-react": "rollup -c ./scripts/rollup.react.config.js | babel > ./build/safetyShiftPlot-react.js"
   },
-  "author": "Rho, Inc.",
-  "license": "ISC",
+  "author": "Rho Inc",
+  "license": "MIT",
   "dependencies": {
     "d3": "^3.5.14",
     "react": "^0.14.7",
@@ -18,6 +18,6 @@
   },
   "devDependencies": {
     "babel": "^5.8.35",
-    "rollup": "^0.25.3"
+    "rollup": "^0.25.1"
   }
 }
