--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "safety-shift-plot",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Chart showing change in lab measures, vital signs and other related measures during the course of a clinical trial.",
   "main": "./build/safetyShiftPlot-chf.js",
   "scripts": {
-    "build": "rollup -c ./scripts/rollup.wrapper.config.js | babel > ./build/safetyShiftPlot.js",
-    "build-chf": "rollup -c ./scripts/rollup.chf.config.js > ./build/safetyShiftPlot-chf.js"
+    "build": "rollup -c ./scripts/rollup.wrapper.config.js | babel > ./build/safetyShiftPlot.js"
   },
   "author": "Rho, Inc.",
   "license": "MIT",
   "dependencies": {
     "d3": "^3.5.14",
-    "react": "^0.14.7",
     "webcharts": "^1.3.2"
   },
   "devDependencies": {
