--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "safety-shift-plot",
   "version": "2.0.0",
   "description": "Chart showing change in lab measures, vital signs and other related measures during the course of a clinical trial.",
-  "main": "./build/safetyShiftPlot-chf.js",
+  "main": "./build/safetyShiftPlot.js",
   "scripts": {
     "build": "rollup -c ./scripts/rollup.wrapper.config.js | babel > ./build/safetyShiftPlot.js"
   },
