--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "safety-shift-plot",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Chart showing change in lab measures, vital signs and other related measures during the course of a clinical trial.",
-  "main": "./build/safetyShiftPlot.js",
-  "scripts": {
-    "build": "rollup -c ./scripts/rollup.wrapper.config.js | babel > ./build/safetyShiftPlot.js"
-  },
+  "main": "build/safetyShiftPlot.js",
   "author": "Rho, Inc.",
   "license": "MIT",
   "dependencies": {
     "d3": "^3.5.14",
     "webcharts": "^1.3.2"
   },
+  "scripts": {
+    "format": "prettier --print-width=100 --tab-width=4 --single-quote --write \"src/**/*.js\"",
+    "build": "npm run format && rollup -c",
+    "watch": "rollup -c -w"
+  },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
     "babel-preset-es2015-rollup": "^1.1.1",
-    "rollup": "^0.25.1",
-    "rollup-plugin-babel": "^2.4.0"
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-watch": "~3.2.2",
+    "prettier":"1.4.4"
   }
 }
