--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "safety-shift-plot",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Chart showing change in lab measures, vital signs and other related measures during the course of a clinical trial.",
-  "main": "build/safetyShiftPlot.js",
+  "main": "./build/safetyShiftPlot.js",
+  "module": "./src/wrapper.js",
   "author": "Rho, Inc.",
   "license": "MIT",
   "dependencies": {
-    "d3": "^3.5.14",
-    "webcharts": "^1.3.2"
+    "d3": "^3",
+    "webcharts": "^1.10"
   },
   "scripts": {
-    "format": "prettier --print-width=100 --tab-width=4 --single-quote --write \"src/**/*.js\"",
-    "build": "npm run format && rollup -c",
+    "build": "npm run bundle && npm run format",
+    "bundle": "rollup -c",
+    "format": "npm run format-src && npm run format-bundle",
+    "format-src": "prettier --print-width=100 --tab-width=4 --single-quote --write \"./src/**/*.js\"",
+    "format-bundle": "prettier --print-width=100 --tab-width=4 --single-quote --write ./build/*.js",
     "watch": "rollup -c -w"
   },
   "devDependencies": {
-    "babel-preset-es2015-rollup": "^1.1.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.4.0",
-    "rollup-watch": "~3.2.2",
-    "prettier":"1.4.4"
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.26.0",
+    "prettier": "^1.7.4",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-watch": "^4.3.1"
   }
 }
