add npm audit fix and rebuild

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "webcharts": "^1.10"
   },
   "scripts": {
-    "build": "npm run bundle && npm run format && npm run build-md",
+    "build": "npm audit fix && npm run bundle && npm run format && npm run build-md",
     "build-md": "node ./scripts/configuration-markdown.js",
     "bundle": "rollup -c",
     "format": "npm run format-src && npm run format-bundle",
